[package]
name = "rwlock_vs_mutex"
version = "0.1.0"
authors = ["Brian L. Troutwine <brian@troutwine.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
codegen-units = 1 # Increases compile time but improve optmization alternatives.
lto = true        # Optimize our binary at the link stage.
opt-level = 'z'   # Optimize for size.
panic = 'abort'